--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ Python utilise l'indentation pour indiquer un bloc de code.</p>
 <li>si 16 &lt; note &lt; 20 --&gt; T.bien</li>
 </ul>
 <h2 id="evaluation">Evaluation :</h2>
-<p><a href="{{ https://docs.google.com/forms/d/e/1FAIpQLSew1EfIdZ0kDUD4nWtrDXgpeNO0dtbm1d87pZ6ez1s6_LEUYA/viewform?usp=sf_link}}">{{ Evaluation de python en google docs :}}</a></p>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSew1EfIdZ0kDUD4nWtrDXgpeNO0dtbm1d87pZ6ez1s6_LEUYA/viewform?usp=sf_link">lien d'Evaluation de python en google docs :</a></p>
               
             </div>
           </div><footer>
@@ -306,7 +306,7 @@ Python utilise l'indentation pour indiquer un bloc de code.</p>
     <!-- Copyright etc -->
   </div>
 
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
+  this website is built by Zakaria taki & Hassan Oudrar || enjoy learning 
 </footer>
           
         </div>
